--- a/bubulle/templates/layout.html
+++ b/bubulle/templates/layout.html
@@ -5,11 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
+    <!-- We'll use Boostrap -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+ 
+     <!-- Link my CSS file -->
+    <link href="/static/styles.css" rel="stylesheet">
+
+
 
     <title>Bubulle: {% block title %}{% endblock %}</title>
 </head>
+
+
 <body>
-    <h1>We're working on it...</h1>
-    
+    <nav class="navbar navbar-expand-sm bg-light">
+        <div class="container-fluid justify-content-center">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Bubulle</a> 
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Breathing parameters</a> 
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Theme</a>
+                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/">About</a>
+                 </li>
+            </ul>
+        </div>
+    </nav>
+
+    <main class="container-fluid justify-content-center">
+        {% block main %}{% endblock %}
+    </main>
+
+    <footer>/footer/</footer>
+    <script type="text/javascript" src="{{url_for('static', filename= 'index.js' )}}"></script>
 </body>
 </html>
