--- a/bubulle/templates/index.html
+++ b/bubulle/templates/index.html
@@ -2,6 +2,12 @@
 
 {% block main %}
     main here
-    <div class="bubble breathing"></div>
+    <div>
+        <div class="bubble" id="Bubble"></div>
+
+    </div>
+    <div>
+        <input type="button" id="StartStop" value="Start">
+    </div>
 
 {% endblock %}
