--- a/bubulle/templates/index.html
+++ b/bubulle/templates/index.html
@@ -1,7 +1,10 @@
 {% extends "layout.html" %}
 
+{% block title %} Home{% endblock %}
+
 {% block main %}
-    main here
+    <h1 class="centrage">Bubulle:</h1>
+    <h3 class="centrage">Your breathing bubble friend</h3>
     <div>
         <div class="bubble" id="Bubble"></div>
 
