--- a/bubulle/templates/layout.html
+++ b/bubulle/templates/layout.html
@@ -27,13 +27,13 @@
                     <a class="nav-link" href="/">Bubulle</a> 
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Breathing parameters</a> 
+                    <a class="nav-link" href="/parameters">Breathing parameters</a> 
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Theme</a>
+                    <a class="nav-link" href="/theme">Theme</a>
                  </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/">About</a>
+                    <a class="nav-link" href="/about">About</a>
                  </li>
             </ul>
         </div>
@@ -43,6 +43,6 @@
         {% block main %}{% endblock %}
     </main>
 
-    <footer>/footer/</footer>
+    <footer>Webpage created by Yours Truly: VeMBe</footer>
 </body>
 </html>
