--- a/bubulle/templates/layout.html
+++ b/bubulle/templates/layout.html
@@ -15,6 +15,16 @@
     <!-- Link my js file, with Defer tag -->
     <script defer type="text/javascript" src="{{url_for('static', filename= 'index.js' )}}"></script>
 
+    <!-- Style fro the breathing class directly here so I can manipulate it -->
+    <style>
+        .breathing {
+            animation-name: breathe3;
+            animation-duration: 14s;
+            animation-timing-function: cubic-bezier(0.6, 0.02, 0.36, 0.94);
+            animation-iteration-count: infinite;
+        }
+    </style>
+
     <title>Bubulle: {% block title %}{% endblock %}</title>
 </head>
 
@@ -43,6 +53,6 @@
         {% block main %}{% endblock %}
     </main>
 
-    <footer>Webpage created by Yours Truly: VeMBe</footer>
+    <footer>Application created by Yours Truly: VeMBe</footer>
 </body>
 </html>
