--- a/bubulle/templates/index.html
+++ b/bubulle/templates/index.html
@@ -12,12 +12,8 @@
     <div>
         <input type="button" id="StartStop" value="Start">
     </div>
-
-    <div class="btn-grid">
-        <button class="btn" id="profile1">1:2:2</button>
-        <button class="btn" id="profile2">2:3:3</button>
-        <button class="btn" id="profile3">5:3:5</button>
-        <button class="btn" id="profile4">5:4:7</button>
+    <div>
+        <h4>Current profile type = {{prof_type | default("5:3:5", true)}}</h4>
     </div>
 
 
