--- a/bubulle/templates/parameters.html
+++ b/bubulle/templates/parameters.html
@@ -16,10 +16,22 @@
             <li>O = Breathe OUT</li>
         </ul>
     </div>
-    <div class="btn-grid">
-        <button class="btn" id="profile1"><a href="/">1:2:2</a></button>
-        <button class="btn" id="profile2"><a href="/">2:3:3</a></button>
-        <button class="btn" id="profile3"><a href="/">5:3:5</a></button>
-        <button class="btn" id="profile4"><a href="/">5:4:7</a></button>
-    </div>
+    <!-- <form class="btn-grid" action="/parameters" method="post">
+        <button class="btn" id="profile1" name="profile1" type="submit">1:2:2</button>
+        <button class="btn" id="profile2" name="profile2" type="submit">2:3:3</button>
+        <button class="btn" id="profile3" name="profile3" type="submit">5:3:5</button>
+        <button class="btn" id="profile4" name="profile4" type="submit">5:4:7</button>
+    </form> -->
+    <form action="/parameters" method="post">
+        <select class="form-select mx-auto w-auto" name="profile">
+            <option disabled selected>Ratios</option>
+            <option value="profile1">1:2:2</option>
+            <option value="profile2">2:3:3</option>
+            <option value="profile3">5:3:5</option>
+            <option value="profile4">5:4:7</option>
+        </select>
+        <div>
+            <button class="btn" type="submit" id="btn-param">Save changes</button>
+        </div>
+    </form>
 {% endblock %}
