--- a/bubulle/templates/layout.html
+++ b/bubulle/templates/layout.html
@@ -29,8 +29,8 @@
 </head>
 
 
-<body>
-    <nav class="navbar navbar-expand-sm bg-light">
+<body class="night-mode">
+    <nav class="navbar-dark bg-dark navbar-expand-sm">
         <div class="container-fluid justify-content-center">
             <ul class="navbar-nav">
                 <li class="nav-item">
