--- a/bubulle/templates/theme.html
+++ b/bubulle/templates/theme.html
@@ -3,5 +3,18 @@
 {% block title %}Theme{% endblock %}
 
 {% block main %}
-    THEME
+
+    <div>
+        <h2>Choose a theme:</h2>
+    </div>
+    <div>
+        <hr>
+    </div>
+    
+    <div>
+        <button class="btn" id="themeDefault">Default</button>
+        <button class="btn" id="themeDark">Dark mode</button>
+        <button class="btn" id="themeNight">Night mode</button>
+    </div>
+
 {% endblock %}
