--- a/bubulle/templates/about.html
+++ b/bubulle/templates/about.html
@@ -3,5 +3,9 @@
 {% block title %}Theme{% endblock %}
 
 {% block main %}
-    ABOUT
+    <div>
+        <h2>About this app:</h2>
+        <p>This app was created in the context of the Harvard CS50 course</p>
+
+    </div>
 {% endblock %}
