started working on README file

--- a/bubulle/templates/layout.html
+++ b/bubulle/templates/layout.html
@@ -60,7 +60,7 @@
                 <button class="btn" id="themeNight" onclick="nightmode()">Night mode</button>
             </div>
             <div id="VeMBe">
-                Application created by Yours Truly: VeMBe
+                Application created by Yours Truly: VeMBe06
             </div>
         </div>
             
